# batteur

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
batteur/: batteur.c
beats/: Blues Jump.json  Blues Shuffle.json  Blues Slow.json  Blues.json  Funk.json  Jazz Ballad.json  Jazz Jump Swing.json  Jazz Light Shuffle.json  Jazz Shuffle.json  Jazz Swing.json  Pop Ballad.json  Pop.json  Rock 2.json  Rock 3.json  Rock 4.json  Rock Ballad.json  Rock.json
clients/: CMakeLists.txt  batteur_jack.cpp
cmake/: BatteurConfig.cmake  LV2Config.cmake  dependencies.cmake
lv2/: CMakeLists.txt  batteur.c  batteur.ttl.in  manifest.ttl.in  modgui.ttl.in
lv2/modgui/: icon-batteur.html  script-batteur.js  stylesheet-batteur.css
plugins/: CMakeLists.txt
plugins/batteur/: CMakeLists.txt  batteur.ttl.in  manifest.ttl.in  modgui.ttl.in
plugins/batteur/modgui/: icon-batteur.html
plugins/stomper/: CMakeLists.txt  manifest.ttl.in  stomper.c  stomper.ttl.in
src/: BeatDescription.cpp  BeatDescription.h  CMakeLists.txt  Debug.h  FileReadingHelpers.cpp  FileReadingHelpers.h  MathHelpers.h  Player.cpp  Player.h  batteur.h  wrapper.cpp
src/atomic_queue/: atomic_queue.h
tests/: CMakeLists.txt  FileReadingT.cpp  FilesT.cpp  LibraryT.cpp
tests/files/: 080 Slow Blues 12-8.json  shuffle.json  sig1.json  sig2.json  sig3.json  test_file_1.mid  test_file_2.mid  test_file_3.mid
tests/files/12-8 Slow Blues/: 12-8 Slow Hat F2.mid  12-8 Slow Hat F3.mid  12-8 Slow Hat F4.mid  12-8 Slow Hat F5.mid  12-8 Slow Hat F6.mid  12-8 Slow Hat.mid  12-8 Slow Ride F1.mid  12-8 Slow Ride F2.mid  12-8 Slow Ride F3.mid  12-8 Slow Ride F4.mid  12-8 Slow Ride F5.mid  12-8 Slow Ride F6.mid  12-8 Slow Ride.mid
tests/files/Ballads/Song 13 088 Samples/Chorus Fills/: 088 S13 Chorus Fill 01.mid  088 S13 Chorus Fill 02.mid  088 S13 Chorus Fill 03.mid  088 S13 Chorus Fill 12.mid
tests/files/Ballads/Song 13 088 Samples/Grooves/: 088 S13 Chorus Hat.mid  088 S13 Chorus Ride.mid  088 S13 Groove ALT 1 Hat.mid  088 S13 Groove ALT 2 Hat.mid  088 S13 Groove ALT 3 Hat.mid  088 S13 Groove ALT 4 Hat.mid  088 S13 Groove ALT 5 Hat.mid  088 S13 Intro.mid  088 S13 Outro.mid  088 S13 Verse Hat.mid  088 S13 Verse Ride.mid  088 S13 Verse Stick.mid
tests/files/Ballads/Song 13 088 Samples/Intro Fills/: 088 S13 Intro Fill 1.mid
tests/files/Ballads/Song 13 088 Samples/Outro Fills/: 088 S13 Outro Fill 1.mid  088 S13 Outro Fill 3.mid
tests/files/Ballads/Song 13 088 Samples/Verse Fills/: 088 S13 Verse Fill 01.mid  088 S13 Verse Fill 02.mid  088 S13 Verse Fill 04.mid  088 S13 Verse Fill 05.mid
tests/files/Funk 1/: 092 Funk 1 Combo 1.mid  092 Funk 1 Combo 2.mid  092 Funk 1 Combo 3.mid  092 Funk 1 Fill 1.mid  092 Funk 1 Fill 2.mid  092 Funk 1 Fill 3.mid  092 Funk 1 Fill 4.mid  092 Funk 1.mid  092 Funk 1A.mid  092 Funk 1B.mid  092 Funk 1C.mid  092 Funk 1D.mid  092 Funk 1E.mid  092 Funk 1F.mid  092 Funk 1G.mid  092 Funk 1H.mid  092 Funk 1I.mid  092 Funk 1J.mid  092 Funk 1K.mid  description.json
tests/files/Surf 1/: description.json
tests/files/Surf 1/Fills/: 160 Surf 42TF Fill 1.mid  160 Surf 42TF Fill 2.mid  160 Surf 42TF Fill 3.mid  160 Surf 42TF Fill 4.mid  160 Surf 42TF Fill 5.mid  160 Surf 42TF Fill 6.mid  160 Surf 42TF Fill 8.mid  160 Surf 42TF Fill 9.mid
tests/files/Surf 1/Grooves/: 160 Surf 42TF Crash 12-Bar.mid  160 Surf 42TF Hat 12-Bar.mid  160 Surf 42TF Hat.mid  160 Surf 42TF OH 12-Bar.mid  160 Surf 42TF OH.mid  160 Surf 42TF Ride 12-Bar.mid  160 Surf 42TF Ride Crashes.mid  160 Surf 42TF Ride.mid
tests/files/Surf 1/Hat Fills/: 160 Surf 42TF Hat Fill 1.mid  160 Surf 42TF Hat Fill 2.mid  160 Surf 42TF Hat Fill 3.mid  160 Surf 42TF Hat Fill 4.mid  160 Surf 42TF Hat Fill 5.mid  160 Surf 42TF Hat Fill 6.mid
tests/files/Surf 1/Ride Fills/: 160 Surf 42TF Ride Fill 1.mid  160 Surf 42TF Ride Fill 2.mid  160 Surf 42TF Ride Fill 3.mid  160 Surf 42TF Ride Fill 4.mid  160 Surf 42TF Ride Fill 5.mid  160 Surf 42TF Ride Fill 6.mid
tests/files/midi/: shuffle_intro.mid  shuffle_part.mid  shuffle_part_ride.mid  snare_fill.mid
tools/: CMakeLists.txt  normalize_velocity.py  serialize.cpp
